hard-gists/005bbad123ef309a5bef/run.log
=== Docker Run Log for 005bbad123ef309a5bef ===
Started at: Mi 29. Okt 11:18:15 CET 2025

[2025-10-29 11:18:15] START: Running container for 005bbad123ef309a5bef
[2025-10-29 11:18:15] SUCCESS: Container 2652b85f52f7267047f226d598a0dcd9b3702184109d3ea52563316ad97a7d59 started for 005bbad123ef309a5bef
=== Container logs for 005bbad123ef309a5bef ===
  File "/snippet.py", line 36
    print str(typeid)+" exception :"+str(exceptionCounter)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 005bbad123ef309a5bef ===
[2025-10-29 11:18:17] INFO: Container 2652b85f52f7267047f226d598a0dcd9b3702184109d3ea52563316ad97a7d59 has stopped
